2015-06-10 Martin Grønholdt

* slighttp/http-response.c (http_send_response): Changed for added size parameter to tcp_send.
* debug.c (db_alloc): Fixed debug message.
* net/tcp.c (send_buffer): Added function to send the buffer.
			(tcp_send): Buffering.
			(tcp_send): Added size paramerter.
			(tcp_sent_cb): Initialise buffer pointers.			.
			(tcp_free): Free buffer.
* net/tcp.h: Added TCP_SEND_BUFFER_SIZE.
		    (tcp_connection): Added send_buffer to struct.
		    (tcp_connection): Added current_buffer_pos to struct.
			(tcp_send): Added size paramerter.		    
* tools/ring.h: Added file.
			  : Added struct ring_buffer.
			  : Added init_ring.
			  : Added ring_push_back.
			  : Added ring_pop_front.
* tools/ring.c: Added file.
			  : Added init_ring.
			  : Added ring_push_back.
			  : Added ring_pop_front.


2015-06-09 Martin Grønholdt

* net/tcp.c (tcp_connect_cb): Set recv_callback and sent_callback.
* File system: Added atomic.js from https://github.com/toddmotto/atomic.
*			 : Added jsonhttprequest.js from https://pixelsvsbytes.com/2011/12/teach-your-xmlhttprequest-some-json/.
* fs/fs.c (fs_read): Return count.
* user_main.c: Added response as parameter to static HTML generators.
* rest/net-names.c (rest_net_names_html): Added JSON MIME type.
				   					    : Added response as parameter.
* slighttp/http-mime.c (http_mime_types): Added JSON MIME type.
* slighttp/http-mime.h: Upped number of MIME types.
* slighttp/http.h: Added parameter response to uri_html_callback.
* slighttp/http-response.c (http_generate_response): Uses fs_uri for file system access.
						   (http_generate_response): Passes response to static call back.
						   (http_generate_response): Corrected bug in MIME detection.
						   (http_send_response): Really print message size when debugging.
						   (http_send_response): Added check for header pointer before sending.
						   (http_send_response): Added more header debugging messages.


2015-06-08 Martin Grønholdt (commited)
